--- a/producots1.html
+++ b/producots1.html
@@ -204,7 +204,7 @@
             <div id="productModal8" class="modal">
                 <div class="modal-content">
                     <span class="close-btn" onclick="closeModal8()">&times;</span>
-                    <img src="img/3.jpg" alt="Producto">
+                    <img src="img/p1/20.jpg" alt="Producto">
                     <h3>servicios Z</h3>
                     <p>Descripción detallada del producto o servicio.</p>
                 </div>
