--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
     <title>Productos</title>
     <link rel="stylesheet" href="ind.css">
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
+
 <header>
         <table>
             <tr>
                 <td><a href="index.html"><img src="logo.jpg" width="100 px" height="70px "></a></td>
-                <td><a href="Servicios.html">Servicios</a></td>
-                <td><a href="producots1.html">Cuidado personal</a></td>
-                <td><a href="productos2.html">Articulos electronicos</a></td>
+                <td><a href="Servicios.html"  class="text-dark text-decoration-none">Servicios</a></td>
+                <td><a href="producots1 copy.html"  class="text-dark text-decoration-none">Cuidado personal</a></td>
+                <td><a href="productos2.html"  class="text-dark text-decoration-none">Articulos electronicos</a></td>
+                
             </tr>
         </table>
 </header>
 
     <br><br>    
 
-    <table>
+<table>
     <th><p>Ofertas Especiales</p></th>
 </table>
 
